@@ -39,9 +39,16 @@
 
 #include "lwip/arch.h"
 #include "lwip/prot/ieee.h"
+#include "xlwipconfig.h"
 
 #ifdef __cplusplus
 extern "C" {
+#endif
+
+#if XLWIP_CONFIG_AXI_ETHERNET_ENABLE_1588
+#define IEEE_1588_PAD_SIZE    8
+#else
+#define IEEE_1588_PAD_SIZE    0
 #endif
 
 #ifndef ETH_HWADDR_LEN
@@ -77,6 +84,9 @@ struct eth_hdr {
 #if ETH_PAD_SIZE
   PACK_STRUCT_FLD_8(u8_t padding[ETH_PAD_SIZE]);
 #endif
+#if XLWIP_CONFIG_AXI_ETHERNET_ENABLE_1588
+  PACK_STRUCT_FLD_8(u8_t padding[IEEE_1588_PAD_SIZE]);
+#endif
   PACK_STRUCT_FLD_S(struct eth_addr dest);
   PACK_STRUCT_FLD_S(struct eth_addr src);
   PACK_STRUCT_FIELD(u16_t type);
@@ -86,7 +96,7 @@ PACK_STRUCT_END
 #  include "arch/epstruct.h"
 #endif
 
-#define SIZEOF_ETH_HDR (14 + ETH_PAD_SIZE)
+#define SIZEOF_ETH_HDR (14 + ETH_PAD_SIZE + IEEE_1588_PAD_SIZE)
 
 #ifdef PACK_STRUCT_USE_INCLUDES
 #  include "arch/bpstruct.h"
